--- a/app/src/main/res/layout/card_task.xml
+++ b/app/src/main/res/layout/card_task.xml
@@ -30,13 +30,12 @@
             android:id="@+id/text1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="13dp"
+            android:layout_toEndOf="@+id/image"
             android:ellipsize="end"
             android:maxLines="1"
-            android:padding="10dp"
-            android:textColor="@android:color/white" />
+            android:padding="10dp" />
 
         <TextView
             android:id="@+id/text2"
@@ -46,7 +45,6 @@
             android:layout_below="@+id/text1"
             android:ellipsize="end"
             android:maxLines="1"
-            android:padding="10dp"
-            android:textColor="@android:color/white" />
+            android:padding="10dp"/>
     </RelativeLayout>
 </android.support.v7.widget.CardView>
