--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,7 @@
 
     <!-- The elevation of our task cards -->
     <dimen name="task_card_elevation">6dp</dimen>
+
+    //Status bar dimensions
+    <dimen name="status_bar_height">25dp</dimen>
 </resources>
