--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -23,7 +23,17 @@
         //Nav bar (If there is no HW buttons)
         <item name="android:navigationBarColor">@color/colorPrimaryDark</item>
 
-        //
+    </style>
+    //A variation of the AppTheme
+    <style name="AppTheme.TransparentActionBar" parent="AppTheme">
+        <item name="android:windowTranslucentStatus">true</item>
+        <item name="android:windowActionBarOverlay">true</item>
+        <item name="android:actionBarStyle">@style/TransparentActionBar</item>
+    </style>
+
+    //Transparent action bar style used by apptheme transparent action bar
+    <style name="TransparentActionBar" parent="android:Theme.Material">
+        <item name="android:background">@android:color/transparent</item>
     </style>
 
 </resources>
