--- a/app/src/main/res/layout/activity_task_list.xml
+++ b/app/src/main/res/layout/activity_task_list.xml
@@ -15,5 +15,5 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/fragment"
-        android:name="com.example.amkelly.tasks.fragment.TaskListFragment"/>
+        android:name="com.example.amkelly.bsp.fragment.TaskListFragment"/>
 </LinearLayout>
