--- a/app/src/main/res/layout/activity_login_auth.xml
+++ b/app/src/main/res/layout/activity_login_auth.xml
@@ -1,3 +1,4 @@
+<!-- TODO: Change the firebase png to my book app logo with a small firebase logo within it-->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_layout"
