--- a/app/src/main/res/layout/fragment_book_edit.xml
+++ b/app/src/main/res/layout/fragment_book_edit.xml
@@ -20,47 +20,51 @@
             android:id="@+id/book_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/gutter"
-            android:layout_marginEnd="@dimen/gutter"
             android:layout_below="@+id/book_image"
-            android:hint="@string/book_title"/>
+            android:layout_marginEnd="@dimen/gutter"
+            android:layout_marginStart="@dimen/gutter"
+            android:hint="@string/book_title"
+            android:textColor="@color/text_color" />
 
         <EditText
             android:id="@+id/book_author"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/gutter"
-            android:layout_marginEnd="@dimen/gutter"
             android:layout_below="@+id/book_title"
-            android:hint="@string/book_author"/>
+            android:layout_marginEnd="@dimen/gutter"
+            android:layout_marginStart="@dimen/gutter"
+            android:hint="@string/book_author"
+            android:textColor="@color/text_color" />
 
         <EditText
             android:id="@+id/book_isbn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/gutter"
-            android:layout_marginEnd="@dimen/gutter"
+            android:layout_alignStart="@+id/book_author"
             android:layout_below="@+id/book_author"
-            android:hint="@string/book_isbn"/>
+            android:hint="@string/book_isbn"
+            android:textColor="@color/text_color" />
 
         <EditText
             android:id="@+id/book_abstract"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignStart="@+id/book_title"
-            android:layout_marginEnd="@dimen/gutter"
             android:layout_below="@id/book_isbn"
+            android:layout_marginEnd="@dimen/gutter"
             android:gravity="top"
-            android:hint="@string/book_abstract" />
+            android:hint="@string/book_abstract"
+            android:textColor="@color/text_color" />
             <!--android:minLines="3"-->
 
         <EditText
             android:id="@+id/book_price"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/gutter"
-            android:layout_marginEnd="@dimen/gutter"
             android:layout_below="@+id/book_abstract"
-            android:hint="@string/book_price"/>
+            android:layout_marginEnd="@dimen/gutter"
+            android:layout_marginStart="@dimen/gutter"
+            android:hint="@string/book_price"
+            android:textColor="@color/text_color" />
     </RelativeLayout>
 </ScrollView>
